content: Wave 2 worked-examples pass — 380 examples across 99 topics
Extends the worked-examples pass to the 99 files scoring <=3 on examples in
the remaining 14 domains: java-jvm, messaging-databases, kubernetes,
spring-core, observability, grpc, networking, docker, security,
interview-craft, hibernate-jpa, rest-api-design, reliability-ops, testing.

Concrete traces added: Prometheus counter-reset arithmetic; least-connections
vs round-robin request routing with busy-until timelines; CUBIC window K;
DPoP/JWK-thumbprint verification; SSA field-ownership conflicts;
OTel metric->trace->log correlation by id.

Each file: one agent added examples + self-verified; a second RECOMPUTED
every new example and checked for regressions. 90/99 clean; verifier caught
9 files with issues (incl. counter-reset 60->70, a miscomputed
least-connections sim, a cardinality figure off by 1-2 orders of magnitude)
— all fixed, and the arithmetic-heavy fixes were independently re-verified.
Validator passes (430 files, 27,481 questions). No headings renamed.